--- a/3. Build a Blackjack game/12. Add basic styling/index.css
+++ b/3. Build a Blackjack game/12. Add basic styling/index.css
@@ -1,13 +1,20 @@
 /* Complete the CSS styling according to the provided design */
 
 body {
-    
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-image: url('images/table.png');
+    background-size: cover;
+    text-align: center;
+    color: white;
+    font-weight: bold;
 }
 
 h1 {
     color: goldenrod;
+    font-size: 65px;
 }
 
 #message-el {
-    
+    font-style: italic;
+    font-size: 45px;
 }
