--- a/5. Build a Chrome Extension/3. Style the button and input tag/index.css
+++ b/5. Build a Chrome Extension/3. Style the button and input tag/index.css
@@ -14,9 +14,27 @@ green color -> #5f9341
 
 
 input {
-    
+    /* border-color: #5f9341; */
+    height: 50px;
+    width: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    box-sizing: border-box;
+    border: 1px solid #5f9341;
+    margin-bottom: 4px;
 }
 
 button {
-    
+    background-color: #5f9341;
+    color: white;
+    font-weight: bold;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border: none;
+
+
 }
