--- a/5. Build a Chrome Extension/29. Style the list/index.css
+++ b/5. Build a Chrome Extension/29. Style the list/index.css
@@ -23,13 +23,16 @@ button {
 
 /* STYLE THE LIST ACCORDING TO THE DESIGN */
 ul {
-    
+    margin-top: 20px;
+    list-style: none;
+    padding-left: 0;
 }
 
 li {
-    
+    margin-top: 5px;
 }
 
-a {
-
+li a {
+    color: #5f9341;
+    font-size: larger;
 }
