--- a/5. Build a Chrome Extension/40. Style the delete button/index.css
+++ b/5. Build a Chrome Extension/40. Style the delete button/index.css
@@ -17,7 +17,7 @@ button {
     background: #5f9341;
     color: white;
     padding: 10px 20px;
-    border: none;
+    border: 1px solid #5f9341;
     font-weight: bold;
 }
 
@@ -25,6 +25,8 @@ button {
 
 #delete-btn {
     
+    color:#5f9341;
+    background: white;
 }
 
 ul {
